Add expires headers.

--- a/index.html
+++ b/index.html
@@ -202,11 +202,11 @@
 					<table class="schedule">
 						<tr>
 							<td><span class="schedule-time">3:00<span class="superscript">pm</span></span></td>
-							<td><h3>Ceremony</h3><a class="hyperlink" href="https://maps.app.goo.gl/z2rjavR3DwiL9t2C7">All Saints Catholic Church<br>22824 2nd St<br>Hayward, CA 94541</a></td>
+							<td><h3>Ceremony</h3><a class="hyperlink" target="_blank" href="https://maps.app.goo.gl/z2rjavR3DwiL9t2C7">All Saints Catholic Church<br>22824 2nd St<br>Hayward, CA 94541</a></td>
 						</tr>
 						<tr>
 							<td><span class="schedule-time">5:00<span class="superscript">pm</span></span></td>
-							<td><h3>Reception</h3><a class="hyperlink" href="https://maps.app.goo.gl/1eDNKBpugKXJdeDV7">Redwood Canyon<br>17007 Redwood Rd<br>Castro Valley, CA 94546</a></td>
+							<td><h3>Reception</h3><a class="hyperlink" target="_blank" href="https://maps.app.goo.gl/1eDNKBpugKXJdeDV7">Redwood Canyon<br>17007 Redwood Rd<br>Castro Valley, CA 94546</a></td>
 						</tr>
 						<tr>
 							<td><span class="schedule-time">6:00<span class="superscript">pm</span></span></td>
@@ -224,7 +224,7 @@
 
 					<div class="button-container">
 						<form target="_blank">
-							<button class="fill" type="submit" formaction="https://forms.gle/cnEVFfZNy8VvA71r8">Submit Your RSVP</button>
+							<button class="fill" type="submit" target="_blank" formaction="https://forms.gle/cnEVFfZNy8VvA71r8">Submit Your RSVP</button>
 						</form>
 					</div>
 
@@ -234,7 +234,7 @@
 
 					<div class="button-container">
 						<form target="_blank">
-							<button class="fill" type="submit" formaction="https://zola.com">Gift Registry</button>
+							<button class="fill" type="submit" target="_blank" formaction="https://zola.com">Gift Registry</button>
 						</form>
 					</div>
 
@@ -253,7 +253,7 @@
 
 					<p>We are incredibly grateful for the endless love, support, and encouragement you have given us throughout our journey. Thank you for your unconditional love and for always being there for us. You are our greatest role models and your guidance has shaped us into the people we are today. We are deeply blessed to have you as our parents and to share this wonderful occasion with you. Thank you for everything you have done and continue to do, we love you more than words can express.</p>
 
-					<p><span class="profile-name">Leyanne & David</span></p>
+					<p><span class="profile-name">David & Leyanne</span></p>
 
 				<a id="faq"></a> <div class="line-box"><hr class="left"><h2>FAQ</h2></div>
 
@@ -283,7 +283,7 @@
 
 					<h3>Where do you recommend guests stay overnight?</h3>
 
-						<p>For your convenience, a block of rooms have been reserved at the <a class="hyperlink" href="https://maps.app.goo.gl/uTbH8f2YYh3jgig1A">Home2 Suites by Hilton Hayward</a> at a discounted rate. Please book a room in our hotel block using the link in the <a class="hyperlink" href="https://forms.gle/cnEVFfZNy8VvA71r8">RSVP form</a>.</p>
+						<p>For your convenience, a block of rooms have been reserved at the <a class="hyperlink" target="_blank" href="https://maps.app.goo.gl/uTbH8f2YYh3jgig1A">Home2 Suites by Hilton Hayward</a> at a discounted rate. Please book a room in our hotel block using the link in the <a class="hyperlink" href="https://forms.gle/cnEVFfZNy8VvA71r8">RSVP form</a>.</p>
 					
 					<br>
 
