Updated schedule and registry language.

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
 
 					<table class="schedule">
 						<tr>
-							<td><span class="schedule-time">3:00<span class="superscript">pm</span></span></td>
+							<td><span class="schedule-time">2:00<span class="superscript">pm</span></span></td>
 							<td><h3>Ceremony</h3><a class="hyperlink" target="_blank" href="https://maps.app.goo.gl/z2rjavR3DwiL9t2C7">All Saints Catholic Church<br>22824 2nd St<br>Hayward, CA 94541</a></td>
 						</tr>
 						<tr>
@@ -220,7 +220,7 @@
 
 				<a id="rsvp"></a> <div class="line-box"><h2>RSVP</h2><hr class="right"></div>
 
-					<p>Please respond by 16 July 2024 using the form below and direct any inquiries to <a class="hyperlink" target="_blank" href="mailto:rsvp@davley2024.wedding">rsvp<span class="digit">@</span>davley2024.wedding</a></p>
+					<p>Please respond by 1 July 2024 using the form below and direct any inquiries to <a class="hyperlink" target="_blank" href="mailto:rsvp@davley2024.wedding">rsvp<span class="digit">@</span>davley2024.wedding</a></p>
 
 					<div class="button-container">
 						<form target="_blank">
@@ -230,13 +230,20 @@
 
 				<a id="registry"></a> <div class="line-box"><hr class="left"><h2>Registry</h2></div>
 
-					<p>Your presence at our wedding is the greatest gift we could ask for. If you would like to honor us with a gift, we have registered a list with [insert details].</p>
+					<p>Dear family and friends,</p>
+
+					<p>As we prepare to begin our new life together, we are filled with gratitude for your love and support. If you wish to honor us with a gift, we kindly ask for a contribution towards our future. Cash gifts will help us start this new chapter, allowing us to create a home and make lasting memories. For those who prefer to give a physical gift, we have also created a registry which can be found here.</p>
 
 					<div class="button-container">
 						<form target="_blank">
 							<button class="fill" type="submit" target="_blank" formaction="https://zola.com">Gift Registry</button>
 						</form>
 					</div>
+					
+					<p>Thank you for your generosity and for being a part of our special day. We can’t wait to celebrate with you!</p>
+
+					<p>With love,</p>
+					<p><span class="profile-name">David & Leyanne</span></p>
 
 				<div class="line-box"><h2>Our Thanks</h2><hr class="right"></div>
 
@@ -253,13 +260,14 @@
 
 					<p>We are incredibly grateful for the endless love, support, and encouragement you have given us throughout our journey. Thank you for your unconditional love and for always being there for us. You are our greatest role models and your guidance has shaped us into the people we are today. We are deeply blessed to have you as our parents and to share this wonderful occasion with you. Thank you for everything you have done and continue to do, we love you more than words can express.</p>
 
+					<p>With love,</p>
 					<p><span class="profile-name">David & Leyanne</span></p>
 
 				<a id="faq"></a> <div class="line-box"><hr class="left"><h2>FAQ</h2></div>
 
 					<h3>What is the dress code?</h3>
 
-						<p>The dress code for our event is formal. Ladies should wear a floor-length evening gown or your most dressy cocktail dress. Gentlemen should wear a suit with a tie or bow tie. Please reserve green for our bridal party.</p>
+						<p>The dress code for our event is formal. Ladies should wear a floor-length evening gown or your most dressy cocktail dress. Gentlemen should wear a suit with a tie or bow tie. Please reserve navy blue for our bridal party.</p>
 					
 					<br>
 
