Compressed images for web opt.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 			  <input type="radio" name="radio-buttons" id="img-1" checked />
 			  <li class="slide-container">
 				<div class="slide-image">
-				  <img alt="shoot1" src="assets/shoot/DSC07887.JPEG">
+				  <img alt="shoot1" src="assets/shoot/DSC07887-small.JPEG">
 				</div>
 				<!-- <div class="carousel-controls">
 				  <label for="img-3" class="prev-slide">
@@ -42,7 +42,7 @@
 			  <input type="radio" name="radio-buttons" id="img-2" />
 			  <li class="slide-container">
 				<div class="slide-image">
-				  <img alt="shoot2" src="assets/shoot/DSC07908.JPEG">
+				  <img alt="shoot2" src="assets/shoot/DSC07908-small.JPEG">
 				</div>
 				<!-- <div class="carousel-controls">
 				  <label for="img-1" class="prev-slide">
@@ -56,7 +56,7 @@
 			  <input type="radio" name="radio-buttons" id="img-3" />
 			  <li class="slide-container">
 				<div class="slide-image">
-				  <img alt="shoot3" src="assets/shoot/DSC07829.JPEG">
+				  <img alt="shoot3" src="assets/shoot/DSC07829-small.JPEG">
 				</div>
 				<!-- <div class="carousel-controls">
 				  <label for="img-2" class="prev-slide">
@@ -220,7 +220,7 @@
 
 				<a id="rsvp"></a> <div class="line-box"><h2>RSVP</h2><hr class="right"></div>
 
-					<p>Please respond by 1 July 2024 using the form below and direct any inquiries to <a class="hyperlink" target="_blank" href="mailto:rsvp@davley2024.wedding">rsvp<span class="digit">@</span>davley2024.wedding</a></p>
+					<p>Please respond by 1 July 2024 using the form below and direct any inquiries to <a class="hyperlink" target="_blank" href="mailto:annedavidpapa@gmail.com">annedavidpapa<span class="digit">@</span>gmail.com</a></p>
 
 					<div class="button-container">
 						<form target="_blank">
