Animate splash page text.

--- a/index.html
+++ b/index.html
@@ -98,7 +98,11 @@
 
 				<div id="splash-container">
 
-					<a class="hyperlink" href="#top"><h1 id="splash-text">David<br>&<br>Leyanne</h1></a>
+					<a class="hyperlink" href="#top">
+						<span class="splash-text">David</span>
+						<span class="splash-text">&</span>
+						<span class="splash-text">Leyanne</span>
+					</a>
 
 				</div>
 
