Added registry link.

--- a/index.html
+++ b/index.html
@@ -236,11 +236,11 @@
 
 					<p>Dear family and friends,</p>
 
-					<p>As we prepare to begin our new life together, we are filled with gratitude for your love and support. If you wish to honor us with a gift, we kindly ask for a contribution towards our future. Cash gifts will help us start this new chapter, allowing us to create a home and make lasting memories. For those who prefer to give a physical gift, we have also created a registry which can be found here.</p>
+					<p>As we prepare to begin our new life together, we are filled with gratitude for your love and support. If you wish to honor us with a gift, we kindly ask for a contribution towards our future. Cash gifts will help us start this new chapter, allowing us to create a home and make lasting memories. For those who prefer to give a physical gift, we have also created a registry which can be found below.</p>
 
 					<div class="button-container">
 						<form target="_blank">
-							<button class="fill" type="submit" target="_blank" formaction="https://zola.com">Gift Registry</button>
+							<button class="fill" type="submit" target="_blank" formaction="https://www.zola.com/registry/leyanneanddavid">Gift Registry</button>
 						</form>
 					</div>
 					
