Fixed cache and button html errors.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 
 			<title>With Hearts Full of Joy</title>
 
-			<meta http-equiv="Cache-control" content="max-age=31536000">
 			<meta name="viewport" content="width=device-width, initial-scale=1.0">
 			<meta property="og:image" content="assets/preview.JPEG">
 			<meta property="og:image:width" content="1200">
@@ -228,7 +227,7 @@
 
 					<div class="button-container">
 						<form target="_blank">
-							<button class="fill" type="submit" target="_blank" formaction="https://forms.gle/cnEVFfZNy8VvA71r8">Submit Your RSVP</button>
+							<button class="fill" type="submit" formaction="https://forms.gle/cnEVFfZNy8VvA71r8">Submit Your RSVP</button>
 						</form>
 					</div>
 
@@ -240,7 +239,7 @@
 
 					<div class="button-container">
 						<form target="_blank">
-							<button class="fill" type="submit" target="_blank" formaction="https://www.zola.com/registry/leyanneanddavid">Gift Registry</button>
+							<button class="fill" type="submit" formaction="https://www.zola.com/registry/leyanneanddavid">Gift Registry</button>
 						</form>
 					</div>
 					
